# fTetWild

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  replicability_instructions.htm
.github/workflows/: continuous.yml
cmake/: DownloadProject.CMakeLists.cmake.in  FindGMPfTetWild.cmake  FindMPFR.cmake  FloatTetwildDependencies.cmake  FloatTetwildDownloadExternal.cmake  FloatTetwildUtils.cmake  Warnings.cmake  geogram.cmake
python/: build_cut_table.py  generate-table-code.py  plot-tet.py  save_all_confs.py
src/: AABBWrapper.cpp  AABBWrapper.h  CMakeLists.txt  CSGTreeParser.cpp  CSGTreeParser.hpp  CutMesh.cpp  CutMesh.h  EdgeCollapsing.cpp  EdgeCollapsing.h  EdgeSplitting.cpp  EdgeSplitting.h  EdgeSwapping.cpp  EdgeSwapping.h  FloatTetCutting.cpp  FloatTetCutting.h  FloatTetCuttingCheck.cpp  FloatTetCuttingCheck.h  FloatTetCuttingParallel.cpp  FloatTetCuttingParallel.h  FloatTetDelaunay.cpp  FloatTetDelaunay.h  FloatTetwild.cpp  FloatTetwild.h  InputFilesParser.cpp  InputFilesParser.hpp  LocalOperations.cpp  LocalOperations.h  Logger.cpp  Logger.hpp  Mesh.cpp  Mesh.hpp  MeshIO.cpp  MeshIO.hpp  MeshImprovement.cpp  MeshImprovement.h  Parameters.h  RandomSource.h  Simplification.cpp  Simplification.h  Statistics.h  (+13 more)
tests/: CMakeLists.txt  main.cpp  test_predicates.cpp  test_subdivision.cpp  test_table.cpp  test_tree.cpp  tests.cpp
